--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ button {
     color: #fff;
     text-align: center;
     font-size: 1.4rem;
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     line-height: 2.4rem;
     border: none;
